# 02.01.2026

./: .gitignore  README.md  config.example.json  olympus.py  pyproject.toml
.kiro/steering/: project-rules.md  technical-setup.md
src/airdrop_farmer/: __init__.py  cli.py  config.py  logging_utils.py  models.py  providers.py  runner.py
tests/: test_cli.py  test_config.py  test_runner.py
